--- a/dz1/1.html
+++ b/dz1/1.html
@@ -23,7 +23,8 @@
 -->
   <script>
     "use strict";
-
+    let celsDeg = +prompt('Введите градусы в цельсиях');
+    alert(`Цельсий: ${celsDeg}, Фаренгейт: ${celsDeg * (9 / 5) + 32}`);
   </script>
 </body>
 
