--- a/dz1/2.html
+++ b/dz1/2.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
+
 <body>
-<!--
+  <!--
 Обязательное задание.
 
 Необходимо создать переменную name, записать в эту переменную свое имя.
@@ -13,10 +15,12 @@
 из переменной name.
 Вывести значение переменной admin в консоль.
 -->
-<script>
-  "use strict";
-
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
+  <script>
+    "use strict";
+    let name = "Dima";
+    let admin = name;
+    console.log(admin);
+  </script>
 </body>
+
 </html>
