--- a/dz1/3.html
+++ b/dz1/3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
+
 <body>
-<!--
+  <!--
 Обязательное задание.
 
 Необходимо вывести в консоль значения выражений:
@@ -27,10 +29,40 @@
 */
 console.log(3 - 4 * 2);
 -->
-<script>
-  "use strict";
-
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
+  <script>
+    "use strict";
+    console.log(10 + 10 + "10");
+    /*
+    1. к 10 прибавляем 10 получаем число 20
+    2. к 20 прибавляем строку "10" получаем строку "2010"
+    3. выводим в консоль "2010"
+    */
+    console.log(10 + "10" + 10);
+    /*
+    1. к 10 прибавляем  строку "10" получаем  строку "1010"
+    2. к строке "1010" прибавляем 10 получаем строку "101010"
+    3. выводим в консоль "101010"
+    */
+    console.log(10 + 10 + +"10");
+    /*
+    1. к 10 прибавляем 10 получаем число 20
+    2. строку "10" унарным + приводим к Number получаем число 10
+    3. Складываем результат из п. 1 и 2 получаем число 30
+    4. выводим в консоль 30;
+    */
+    console.log(10 / -"");
+    /*
+    1. преобразуем пустую строку унарным - в число -0 (минус ноль)
+    2. делим 10 на -0 получаем -infinity (минус бесконечность)
+    3. выводим в консоль -infinity
+    */
+    console.log(10 / +"2,5");
+  /*
+      1. строку "2,5" унарным + ПРОБУЕМ привести к Number, но поскольку вместо точки стоит запятая, получаем строку "2,5"
+      2. делим число 10 на строку "2,5" получаем NAN
+      3. выводим в консоль NAN;
+      */
+  </script>
 </body>
+
 </html>
