--- a/dz8/index.html
+++ b/dz8/index.html
@@ -29,15 +29,15 @@
                     <span>5</span>
                 </span>
                 <div class="cartCounter">
-                    <div>
-                        <ul>
-                            <li>Название товара</li>
-                            <li>Количество</li>
-                            <li>Цена за шт.</li>
-                            <li>Итого</li>
-                        </ul>
+                    <div class="cartCounter-main">
+                        <div>Название товара</div>
+                        <div>Количество</div>
+                        <div>Цена за шт.</div>
+                        <div>Итого</div>
                     </div>
-
+                    <div class="cartCounter-total">
+                        Товаров в корзине на сумму $<span></span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -151,12 +151,12 @@
 
         <div class="featuredItems">
 
-            <div class="featuredItem">
+            <div class="featuredItem" data-id="1" data-name="featured/1" data-price="12">
 
                 <div class="featuredImgWrap">
                     <img src="images/featured/1.jpg" alt="">
                     <div class="featuredImgDark">
-                        <button>
+                        <button class="addToCart">
                             <img src="images/cart.svg" alt="">
                             Add to Cart
                         </button>
@@ -179,12 +179,12 @@
 
             </div>
 
-            <div class="featuredItem">
+            <div class="featuredItem" data-id="2" data-name="featured/2" data-price="22">
 
                 <div class="featuredImgWrap">
                     <img src="images/featured/2.jpg" alt="">
                     <div class="featuredImgDark">
-                        <button>
+                        <button class="addToCart">
                             <img src="images/cart.svg" alt="">
                             Add to Cart
                         </button>
@@ -207,12 +207,12 @@
 
             </div>
 
-            <div class="featuredItem">
+            <div class="featuredItem" data-id="3" data-name="featured/3" data-price="32">
 
                 <div class="featuredImgWrap">
                     <img src="images/featured/3.jpg" alt="">
                     <div class="featuredImgDark">
-                        <button>
+                        <button class="addToCart">
                             <img src="images/cart.svg" alt="">
                             Add to Cart
                         </button>
@@ -235,12 +235,12 @@
 
             </div>
 
-            <div class="featuredItem">
+            <div class="featuredItem" data-id="4" data-name="featured/4" data-price="42">
 
                 <div class="featuredImgWrap">
                     <img src="images/featured/4.jpg" alt="">
                     <div class="featuredImgDark">
-                        <button>
+                        <button class="addToCart">
                             <img src="images/cart.svg" alt="">
                             Add to Cart
                         </button>
@@ -263,12 +263,12 @@
 
             </div>
 
-            <div class="featuredItem">
+            <div class="featuredItem" data-id="5" data-name="featured/5" data-price="52">
 
                 <div class="featuredImgWrap">
                     <img src="images/featured/5.jpg" alt="">
                     <div class="featuredImgDark">
-                        <button>
+                        <button class="addToCart">
                             <img src="images/cart.svg" alt="">
                             Add to Cart
                         </button>
@@ -290,12 +290,12 @@
                 </div>
 
             </div>
-            <div class="featuredItem">
+            <div class="featuredItem" data-id="6" data-name="featured/6" data-price="62">
 
                 <div class="featuredImgWrap">
                     <img src="images/featured/6.jpg" alt="">
                     <div class="featuredImgDark">
-                        <button>
+                        <button class="addToCart">
                             <img src="images/cart.svg" alt="">
                             Add to Cart
                         </button>
@@ -419,7 +419,7 @@
     </div>
 
     <script src="app.js"></script>
-    <script src="app.js"></script>
+    <script src="korzina.js"></script>
 </body>
 
 </html>
