--- a/dz8/index.html
+++ b/dz8/index.html
@@ -26,7 +26,7 @@
 
                 <span class="cartIconWrap">
                     <img class="cartIcon" src="images/cart.png" alt="">
-                    <span>5</span>
+                    <span></span>
                 </span>
                 <div class="cartCounter">
                     <div class="cartCounter-main">
